judgegirl/OpenCL/10092. OpenCL Build Program Debug/testdata/0.cl
typedef unsigned int uint32_t;
__kernel void mul(__global uint32_t A[MAXN][MAXN], 
		  __global uint32_t B[MAXN][MAXN], 
		  __global uint32_t C[MAXN][MAXN], const int N)
{
}
